2002-01-31  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (man_MANS): Added autotrace.1.

	* autotrace.1: Contributed by R. P. C. Rodgers<rodgers@nlm.nih.gov>.

2002-01-30  Masatake YAMATO  <yamato@redhat.com>

	* configure.in (AC_CHECK_LIB(png)): Added -lm.

2002-01-27  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_splines_new_full): Set progress 1.0
	at the end of this function.

	* main.c (dot_printer): Style of progress report
	is changed.

	* xstd.h (XREALLOC): Remove the last backslash
	at XREALLOC. This is my typo.

2002-01-23  Masatake YAMATO  <yamato@redhat.com>

	* xstd.h: Use assert instead of FATAL.

	* input-pnm.c (pnm_load_image): Use
	fopen instead of xfopen. Use fclose instead
	of xfclose.

2001-12-24  Martin Weber <martweb@gmx.net>

	* vc++6.0.txt: Removed.
	Message-ID: <3C4C7155.934E0C5D@gmx.net>.

	* autotrace.vcproj: Added exception.[ch].

	* autotrace.dsp: Likewise.

	Message-ID: <3C4C70AF.60741033@gmx.net>.
	
2002-01-23  Masatake YAMATO  <yamato@redhat.com>

	* main.c (USAGE1::dpi): Write about emf.
	Suggested by Stewart C. Russell <stewart@ref.collins.co.uk>.

2002-01-19  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_bitmap_init): XMALLOC->XCALLOC 
	again.
	I had a mistake at a change in
	2002-01-05  Masatake YAMATO  <yamato@redhat.com>.
	What I did is "XMALLOC->XCALLOC" in at_bitmap_new.
	What I should is "XMALLOC->XCALLOC" in at_bitmap_init.
	I do in this time What I should.

2002-01-15  Masatake YAMATO  <yamato@redhat.com>

	* output.[ch]: removed fatal. use exception.

	* main.c (main): Pass a error handler to read
	and write functions.

	* input.h: Included exception.h.

	* input.c (at_input_get_handler_by_suffix): Don't
	cast returned value(magick_load_image).

	* input-*.[ch]: removed fatal. use exception.

	* autotrace.[ch] (at_splines_write): took
	new args, msg_func and msg_data.
	(at_bitmap_read): Likewise.
	(at_input_read_func,at_output_write_func): Likewise.
	